Add tasks to lab 4

--- a/06_Lab4/Lab4.ipynb
+++ b/06_Lab4/Lab4.ipynb
@@ -7,6 +7,12 @@
    "id": "e290efe51e059bc7"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Зависимости",
+   "id": "4a9dc92352dcaa7d"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -24,6 +30,18 @@
    ],
    "outputs": [],
    "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 1\n",
+    "На вход передатчика подается некоторый сигнал во времени. В качестве сигнала\n",
+    "возможно рассмотреть сигнал прямоугольных периодических импульсов.\n",
+    "Реализовать свертку сигнала с некоторым ядром во временной области.\n",
+    "В качестве ядра свертки использовать (а) y=A•exp(-x^2), (б) любую линейную функцию."
+   ],
+   "id": "a9467c4831b5c107"
   },
   {
    "metadata": {
@@ -110,6 +128,16 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 2\n",
+    "Чтобы разобраться в алгоритме свертки двух сигналов – реализуйте свой алгоритм,\n",
+    "осуществляющий свертку сигнала с произвольным ядром."
+   ],
+   "id": "5eee02603d2796ef"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -121,6 +149,16 @@
     "exercise2()"
    ],
    "id": "2f3eb581650fef35"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 3\n",
+    "Для любого выбранного Вами ядра свертки убедиться, что свертка во временной\n",
+    "области эквивалентна умножению в частотной области (теорема о свертке)."
+   ],
+   "id": "393eb6d402a76ea0"
   },
   {
    "metadata": {},
@@ -138,6 +176,16 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 4\n",
+    "Разобраться в реализации свертки с ядром Гаусса для реализации\n",
+    "сглаживающего фильтра во временной области."
+   ],
+   "id": "d6814144ec6fc89b"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -149,6 +197,17 @@
     "exercise4()"
    ],
    "id": "a45da1d506e04317"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 5\n",
+    "Реализовать пункт 4 в частотной области. Убедиться, что результаты совпадают.\n",
+    "Настройте параметры ядра Гаусса таким образом, чтобы реализовать: (а) узкополосной\n",
+    "фильтр (б) фильтр нижних частот"
+   ],
+   "id": "422c8c6bbd1fc0f1"
   },
   {
    "metadata": {},
@@ -166,6 +225,15 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 6\n",
+    "Реализовать полосовой фильтр, используя окно Планка."
+   ],
+   "id": "f9fe30bbdb9fdd33"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
@@ -177,6 +245,16 @@
     "exercise6()"
    ],
    "id": "1d4e3a41577c3622"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Задание 7\n",
+    "Сравнить результат фильтрации зашумленного сигнала при использовании ядра\n",
+    "Гаусса и окна Планка."
+   ],
+   "id": "30298b37a7181d99"
   },
   {
    "metadata": {},
